make code compiler at gcc 4.82

--- a/src/test/cppunit/Makefile
+++ b/src/test/cppunit/Makefile
@@ -41,7 +41,7 @@ SRCS = easy_main.cc \
 
 .PHONY : easy_main
 easy_main : $(OBJS) 
-	$(CXX) $(SRCS) -I./ -D__LINUX $(CPPFLAGS) $(LFLAGS) -o $^ -o $@ -leasy -pthread -rdynamic
+	$(CXX) $(SRCS) -I./ -D__LINUX $(CPPFLAGS) $(LFLAGS) -o $^ -o $@ -leasy -pthread -rdynamic -fpermissive
 .PHONY : clean
 clean:
 	-rm *.o test_main
