fix all warnning

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -7,7 +7,7 @@ CPPFLAGS = $(CFLAGS)
 .PHONY : easy_test_linux_static_lib
 easy_test_linux_static_lib : $(OBJS) 
 #g++ easy_test_linux_static_lib.cc -leasy $(CPPFLAGS) $(LFLAGS)  -static -o easy_test_linux_static_lib
-	$(CXX) -g -Wall -v $(CPPFLAGS) $(LFLAGS) $^ -o $@ -leasy -pthread
+	$(CXX) -g -Wall -v $(CPPFLAGS) $(LFLAGS) $^ -o $@ -leasy -pthread -Wunused-variable
 
 .PHONY : clean
 clean:
