update gitignore for libevent

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,44 @@ bin
 Debug/
 core.*
 src/test/cppunit/easy_main
+
+*.log
+
+#libevent
+dep/libevent/.deps/
+dep/libevent/.libs/
+dep/libevent/Makefile
+dep/libevent/autom4te.cache/
+dep/libevent/config.h
+dep/libevent/config.status
+dep/libevent/include/Makefile
+dep/libevent/include/event2/event-config.h
+dep/libevent/libevent.pc
+dep/libevent/libevent_openssl.pc
+dep/libevent/libevent_pthreads.pc
+dep/libevent/libtool
+dep/libevent/sample/.libs/
+dep/libevent/sample/Makefile
+dep/libevent/sample/dns-example
+dep/libevent/sample/event-test
+dep/libevent/sample/hello-world
+dep/libevent/sample/http-server
+dep/libevent/sample/le-proxy
+dep/libevent/sample/signal-test
+dep/libevent/sample/time-test
+dep/libevent/stamp-h1
+dep/libevent/test/.deps/
+dep/libevent/test/.libs/
+dep/libevent/test/Makefile
+dep/libevent/test/bench
+dep/libevent/test/bench_cascade
+dep/libevent/test/bench_http
+dep/libevent/test/bench_httpclient
+dep/libevent/test/regress
+dep/libevent/test/rpcgen-attempted
+dep/libevent/test/test-changelist
+dep/libevent/test/test-eof
+dep/libevent/test/test-init
+dep/libevent/test/test-ratelim
+dep/libevent/test/test-time
+dep/libevent/test/test-weof
