update gitignore for protobuf

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,55 @@ dep/libevent/test/test-init
 dep/libevent/test/test-ratelim
 dep/libevent/test/test-time
 dep/libevent/test/test-weof
+
+#protobuf
+dep/protobuf/config.h
+dep/protobuf/config.status
+dep/protobuf/gtest/Makefile
+dep/protobuf/gtest/build-aux/config.h
+dep/protobuf/gtest/build-aux/stamp-h1
+dep/protobuf/gtest/config.status
+dep/protobuf/gtest/fused-src/gtest/.deps/
+dep/protobuf/gtest/libtool
+dep/protobuf/gtest/samples/.deps/
+dep/protobuf/gtest/scripts/gtest-config
+dep/protobuf/gtest/src/.deps/
+dep/protobuf/gtest/test/.deps/
+dep/protobuf/libtool
+dep/protobuf/protobuf-lite.pc
+dep/protobuf/protobuf.pc
+dep/protobuf/src/.deps/
+dep/protobuf/src/.libs/
+dep/protobuf/src/Makefile
+dep/protobuf/src/google/protobuf/compiler/cpp/cpp_test_bad_identifiers.pb.cc
+dep/protobuf/src/google/protobuf/compiler/cpp/cpp_test_bad_identifiers.pb.h
+dep/protobuf/src/google/protobuf/unittest.pb.cc
+dep/protobuf/src/google/protobuf/unittest.pb.h
+dep/protobuf/src/google/protobuf/unittest_custom_options.pb.cc
+dep/protobuf/src/google/protobuf/unittest_custom_options.pb.h
+dep/protobuf/src/google/protobuf/unittest_embed_optimize_for.pb.cc
+dep/protobuf/src/google/protobuf/unittest_embed_optimize_for.pb.h
+dep/protobuf/src/google/protobuf/unittest_empty.pb.cc
+dep/protobuf/src/google/protobuf/unittest_empty.pb.h
+dep/protobuf/src/google/protobuf/unittest_import.pb.cc
+dep/protobuf/src/google/protobuf/unittest_import.pb.h
+dep/protobuf/src/google/protobuf/unittest_import_lite.pb.cc
+dep/protobuf/src/google/protobuf/unittest_import_lite.pb.h
+dep/protobuf/src/google/protobuf/unittest_import_public.pb.cc
+dep/protobuf/src/google/protobuf/unittest_import_public.pb.h
+dep/protobuf/src/google/protobuf/unittest_import_public_lite.pb.cc
+dep/protobuf/src/google/protobuf/unittest_import_public_lite.pb.h
+dep/protobuf/src/google/protobuf/unittest_lite.pb.cc
+dep/protobuf/src/google/protobuf/unittest_lite.pb.h
+dep/protobuf/src/google/protobuf/unittest_lite_imports_nonlite.pb.cc
+dep/protobuf/src/google/protobuf/unittest_lite_imports_nonlite.pb.h
+dep/protobuf/src/google/protobuf/unittest_mset.pb.cc
+dep/protobuf/src/google/protobuf/unittest_mset.pb.h
+dep/protobuf/src/google/protobuf/unittest_no_generic_services.pb.cc
+dep/protobuf/src/google/protobuf/unittest_no_generic_services.pb.h
+dep/protobuf/src/google/protobuf/unittest_optimize_for.pb.cc
+dep/protobuf/src/google/protobuf/unittest_optimize_for.pb.h
+dep/protobuf/src/protoc
+dep/protobuf/src/unittest_proto_middleman
+dep/protobuf/stamp-h1
+dep/protobuf/Makefile
