update gitignore for jansson

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,19 @@ dep/protobuf/src/protoc
 dep/protobuf/src/unittest_proto_middleman
 dep/protobuf/stamp-h1
 dep/protobuf/Makefile
+
+#jansson
+dep/jansson/Makefile
+dep/jansson/config.h
+dep/jansson/config.status
+dep/jansson/doc/Makefile
+dep/jansson/jansson.pc
+dep/jansson/libtool
+dep/jansson/src/.deps/
+dep/jansson/src/.libs/
+dep/jansson/src/Makefile
+dep/jansson/stamp-h1
+dep/jansson/test/Makefile
+dep/jansson/test/suites/Makefile
+dep/jansson/test/suites/api/.deps/
+dep/jansson/test/suites/api/Makefile
