update dep for jansson ,mongo-c

--- a/.gitignore
+++ b/.gitignore
@@ -167,26 +167,26 @@ dep/mongo-c-driver/examples/bulk/.dirstamp
 dep/mongo-c-driver/filter-bsondump
 dep/mongo-c-driver/find-and-modify
 #dep/mongo-c-driver/libtool
-dep/mongo-c-driver/mongoc-dump
-dep/mongo-c-driver/mongoc-ping
-dep/mongo-c-driver/mongoc-rpc-validate
-dep/mongo-c-driver/mongoc-stat
-dep/mongo-c-driver/mongoc-tail
-dep/mongo-c-driver/src/libbson/.libs/
-dep/mongo-c-driver/src/libbson/Makefile
-dep/mongo-c-driver/src/libbson/bcon-col-view
-dep/mongo-c-driver/src/libbson/bcon-speed
-dep/mongo-c-driver/src/libbson/bson-metrics
-dep/mongo-c-driver/src/libbson/bson-to-json
-dep/mongo-c-driver/src/libbson/bson-validate
-dep/mongo-c-driver/src/libbson/config.status
+#dep/mongo-c-driver/mongoc-dump
+#dep/mongo-c-driver/mongoc-ping
+#dep/mongo-c-driver/mongoc-rpc-validate
+#dep/mongo-c-driver/mongoc-stat
+#dep/mongo-c-driver/mongoc-tail
+#dep/mongo-c-driver/src/libbson/.libs/
+#dep/mongo-c-driver/src/libbson/Makefile
+#dep/mongo-c-driver/src/libbson/bcon-col-view
+#dep/mongo-c-driver/src/libbson/bcon-speed
+#dep/mongo-c-driver/src/libbson/bson-metrics
+#dep/mongo-c-driver/src/libbson/bson-to-json
+#dep/mongo-c-driver/src/libbson/bson-validate
+#dep/mongo-c-driver/src/libbson/config.status
 dep/mongo-c-driver/src/libbson/examples/.deps/
 dep/mongo-c-driver/src/libbson/examples/.dirstamp
-dep/mongo-c-driver/src/libbson/json-to-bson
-dep/mongo-c-driver/src/libbson/libtool
+#dep/mongo-c-driver/src/libbson/json-to-bson
+#dep/mongo-c-driver/src/libbson/libtool
 dep/mongo-c-driver/src/libbson/src/bson/.deps/
 dep/mongo-c-driver/src/libbson/src/bson/.dirstamp
-dep/mongo-c-driver/src/libbson/src/bson/bson-config.h
+#dep/mongo-c-driver/src/libbson/src/bson/bson-config.h
 dep/mongo-c-driver/src/libbson/src/libbson-1.0.pc
 dep/mongo-c-driver/src/libbson/src/yajl/.deps/
 dep/mongo-c-driver/src/libbson/src/yajl/.dirstamp
